interpreter/tests/test_files/pos/jmper.s
	mov r1 pc
	lea r1 5
	restrict r1 E GLOBAL
	jmp r1
	fail
	add r2 5 7
	halt
