interpreter/tests/test_files/neg/bad_flow1.s
	mov r1 pc
	restrict r1 E
	restrict r1 RWX
	halt
